# base-app

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  Taskfile.yml  app.yml  app_entrypoint.sh  app_setup.sh  base.env  base_app  base_entrypoint.sh  base_job.sh  base_setup.sh  config_interpol  connect_to_app.sh  cred_tool  devbox.json  docker-compose.template  docker-compose.yml  dot_env_setup.sh  entrypoint.sh  go_setup.sh  healthchecks_heartbeat.sh  hivemind_setup.sh  java_setup.sh  lib  make-app-user.sh  pom.xml  pyproject.toml  python_setup.sh  requirements.txt  rust_setup.sh  yaml_interpol
.devcontainer/: dev-env-deps.sh  devcontainer-lock.json  devcontainer.json
.github/workflows/: main.yml
app/: __init__.py  __main__.py
config/: Procfile  app.conf  aws-config  healthchecks_heartbeat  supervisord.conf
config/cron/: base_job
rapp/: Cargo.toml
rapp/src/: main.rs
rlib/: Cargo.toml
src/main/java/tailucas/app/: App.java  Mqtt.java  MyClass.java  OnePassword.java  RabbitMq.java
src/main/resources/: log4j2.properties
src/test/java/tailucas/app/: AppTest.java
