[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pyzmq = "^26.0.2"
sentry-sdk = "^2.0.1"
tailucas-pylib = "^0.4.0"
onepasswordconnectsdk = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
